Add: style setup

--- a/index.html
+++ b/index.html
@@ -21,42 +21,42 @@
       </div>
       <div class="management">
         <div class="inputs management__menu">
-          <input type="text" class="inputs__title" placeholder="title" />
-          <input type="text" class="inputs__subtitle" placeholder="subtitle" />
-          <input type="text" class="inputs__subject" placeholder="subject" />
+          <input type="text" class="inputs__title" placeholder="> title" />
+          <input type="text" class="inputs__subtitle" placeholder="> subtitle" />
+          <input type="text" class="inputs__subject" placeholder="> subject" />
         </div>
         <div class="background management__menu">
-          <div class="background__text management__menu__title">select text type</div>
+          <div class="background__text management__menu__title">text</div>
           <div class="btns">
-            <button class="btn background__gradient"></button>
-            <button class="btn background__solid"></button>
-            <button class="btn background__import_image"></button>
+            <button class="btn background__gradient">gradient</button>
+            <button class="btn background__solid">solid</button>
+            <button class="btn background__import_image">import_image</button>
           </div>
         </div>
         <div class="field_type management__menu">
-          <div class="field_type__text management__menu__title">select option type</div>
+          <div class="field_type__text management__menu__title">option</div>
           <div class="btns">
-            <button class="btn field_type__option1"></button>
-            <button class="btn field_type__option2"></button>
-            <button class="btn field_type__option3"></button>
+            <button class="btn field_type__option1">title only</button>
+            <button class="btn field_type__option2">title / subtitle</button>
+            <button class="btn field_type__option3">title / subtitle / subject</button>
           </div>
         </div>
         <div class="font management__menu">
-          <div class="font__text management__menu__title">select background type</div>
+          <div class="font__text management__menu__title">background</div>
           <div class="btns">
             <button class="btn font__shadow">font shadow</button>
-            <button class="btn font__color">font color b</button>
+            <button class="btn font__color">font color</button>
             <button class="btn font__size">font size Large / small</button>
           </div>
         </div>
         <div class="master_panel">
-          <button id="reset" class="btn"></button>
-          <button id="save" class="btn"></button>
+          <button class="master_panel__btn reset">reset</button>
+          <button class="master_panel__btn save">save</button>
         </div>
       </div>
       <footer class="copyright">
-        <p class="header__username">ⓒ Jung Jaewon</p>
-        <img class="header__image" src="img/github.png" alt="github" />
+        <img class="copyright__image" src="img/github.png" alt="github" />
+        <div class="copyright__text">ⓒ Jung Jaewon</div>
       </footer>
     </section>
   </body>
