Add: background gradient, solid changing function

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="background management__menu">
           <div class="background__text management__menu__title">text</div>
           <div class="btns">
-            <button class="btn background__gradient">gradient</button>
-            <button class="btn background__solid">solid</button>
-            <button class="btn background__import_image">import_image</button>
+            <button class="btn font__shadow">font shadow</button>
+            <button class="btn font__color">font color</button>
+            <button class="btn font__size">font size Large / small</button>
           </div>
         </div>
         <div class="field_type management__menu">
@@ -39,15 +39,15 @@
           <div class="btns">
             <button class="btn field_type__option1">title only</button>
             <button class="btn field_type__option2">title / subtitle</button>
-            <button class="btn field_type__option3">title / subtitle / subject</button>
+            <button class="btn field_type__option3 selected">title / subtitle / subject</button>
           </div>
         </div>
         <div class="font management__menu">
           <div class="font__text management__menu__title">background</div>
-          <div class="btns">
-            <button class="btn font__shadow">font shadow</button>
-            <button class="btn font__color">font color</button>
-            <button class="btn font__size">font size Large / small</button>
+          <div class="btns background_btns">
+            <button class="btn background__gradient">gradient</button>
+            <button class="btn background__solid">solid</button>
+            <button class="btn background__import_image">import_image</button>
           </div>
         </div>
         <div class="master_panel">
