--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
           <input type="text" data-set="subject" class="inputs__field inputs__subject" placeholder="> subject" />
         </div>
         <div class="background management__menu">
-          <div class="background__text management__menu__title">text</div>
+          <div class="background__text management__menu__title">Text Option</div>
           <div class="btns">
-            <button class="btn font__shadow">font shadow</button>
-            <button class="btn font__color">font color</button>
-            <button class="btn font__size">font size Large / small</button>
+            <button class="btn font__shadow">Shadow</button>
+            <button class="btn font__color">Color</button>
+            <button class="btn font__size">Large / Small</button>
           </div>
         </div>
         <div class="field_type management__menu">
-          <div class="field_type__text management__menu__title">option</div>
+          <div class="field_type__text management__menu__title">Component Option</div>
           <div class="btns">
-            <button class="btn field_type__option1">title only</button>
-            <button class="btn field_type__option2">title / subtitle</button>
-            <button class="btn field_type__option3 selected">title / subtitle / subject</button>
+            <button class="btn field_type__option1">Title only</button>
+            <button class="btn field_type__option2">Title & Subtitle</button>
+            <button class="btn field_type__option3 selected">Title & Subtitle & Subject</button>
           </div>
         </div>
         <div class="font management__menu">
-          <div class="font__text management__menu__title">background</div>
+          <div class="font__text management__menu__title">Background Option</div>
           <div class="btns background_btns">
-            <button class="btn background__gradient">gradient</button>
-            <button class="btn background__solid">solid</button>
-            <button class="btn background__import_image">import_image</button>
+            <button class="btn background__gradient">Gradient</button>
+            <button class="btn background__solid">Solid</button>
+            <button class="btn background__import_image">Image</button>
           </div>
         </div>
         <div class="master_panel">
-          <button class="master_panel__btn reset">reset</button>
-          <button class="master_panel__btn save">save</button>
+          <button class="master_panel__btn reset">RESET</button>
+          <button class="master_panel__btn save">SAVE</button>
         </div>
       </div>
       <footer class="copyright">
