Add: font function added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </header>
       <div class="preview">
         <ul class="content_list">
-          <li class="title">title</li>
-          <li class="subtitle">subtitle</li>
-          <li class="subject">subject</li>
+          <li class="title preview_content">title</li>
+          <li class="subtitle preview_content">subtitle</li>
+          <li class="subject preview_content">subject</li>
         </ul>
       </div>
       <div class="management">
@@ -27,11 +27,11 @@
           <input type="text" data-set="subject" class="inputs__field inputs__subject" placeholder="> subject" />
         </div>
         <div class="background management__menu">
-          <div class="background__text management__menu__title">Text Option</div>
-          <div class="btns">
-            <button class="btn font__shadow">Shadow</button>
-            <button class="btn font__color">Color</button>
-            <button class="btn font__size">Large / Small</button>
+          <div class="background__text management__menu__title">Font Option</div>
+          <div class="btns font_btns">
+            <button class="btn font__btn font__shadow">Shadow</button>
+            <button class="btn font__btn font__color">Black / White</button>
+            <button class="btn font__btn font__size">Large / Small</button>
           </div>
         </div>
         <div class="field_type management__menu">
