Add: component option function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="background management__menu">
           <div class="background__text management__menu__title">Font Option</div>
-          <div class="btns font_btns">
+          <div class="btns">
             <button class="btn font__btn font__shadow">Shadow</button>
             <button class="btn font__btn font__color">Black / White</button>
             <button class="btn font__btn font__size">Large / Small</button>
@@ -37,9 +37,9 @@
         <div class="field_type management__menu">
           <div class="field_type__text management__menu__title">Component Option</div>
           <div class="btns">
-            <button class="btn field_type__option1">Title only</button>
-            <button class="btn field_type__option2">Title & Subtitle</button>
-            <button class="btn field_type__option3 selected">Title & Subtitle & Subject</button>
+            <button class="btn component_optionBtn field_type__option1">Title only</button>
+            <button class="btn component_optionBtn field_type__option2">Title & Subtitle</button>
+            <button class="btn component_optionBtn field_type__option3 selected">Title & Subtitle & Subject</button>
           </div>
         </div>
         <div class="font management__menu">
