--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="copyright__text">ⓒ Jung Jaewon</div>
       </footer>
     </section>
-    <div class="modal hidden"></div>
+    <!-- <div class="modal hidden"></div> -->
     <a id="target" style="display: none"></a>
   </body>
 </html>
